@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-18
-Date: 2006-09-13
+Version: 0.995-19
+Date: 2006-09-15
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
